<resources>
    <string name="app_name">妙定工场</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_input_no">请输入账号</string>
    <string name="shop_list">门店列表</string>
    <string name="shop_customer">门店访客</string>
    <string name="guest_record">访客记录</string>
    <string name="read_and_write">读写内存</string>
    <string name="shop_name">门店名称：</string>
    <string name="shop_info">门店信息：</string>
    <string name="shop_address">门店地址：</string>
    <string name="visit_time">访问时间：</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_age">请输入年龄</string>
    <string name="save">保存</string>
    <string name="name">姓名：</string>
    <string name="sex">性别：</string>
    <string name="age">年龄：</string>
    <string name="phone">手机：</string>
    <string name="type">类型：</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_type">请输入访客类型</string>
    <string name="input_sex">请输入性别</string>
    <string name="alter">编辑</string>
    <string name="record">记录</string>
    <string name="guset_info">顾客信息</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="to">至</string>
    <string name="flow_statistics">客流统计</string>
    <string name="age_statistics">年龄统计</string>
    <string name="sex_statistics">性别统计</string>
    <string name="time_statistics">到店次数</string>
    <string name="times_statistics">到店次数</string>
    <string name="check_new_version">检测到新版本，请更新</string>
    <string name="update_immediately">立即更新</string>
    <string name="downloading">正在下载</string>
    <string name="log_out">退出登录</string>
</resources>
