<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_ed"
                android:fitsSystemWindows="true">

    <include
        layout="@layout/widget_header_layout"/>

    <LinearLayout
        android:id="@+id/ll_customer_name"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:text="@string/name"
            android:textColor="@color/gray_22"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_customer_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_name"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="@color/gray_22"
            android:textColorHint="@color/gray_97"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_customer_sex"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@id/ll_customer_name"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:text="@string/sex"
            android:textColor="@color/gray_22"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_guest_sex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/input_sex"
            android:textColor="@color/gray_22"
            android:textColorHint="@color/gray_97"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_customer_age"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@id/ll_customer_sex"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:text="@string/age"
            android:textColor="@color/gray_22"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_guest_age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/input_age"
            android:textColor="@color/gray_22"
            android:textColorHint="@color/gray_97"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_customer_phone"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@id/ll_customer_age"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:text="@string/phone"
            android:textColor="@color/gray_22"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_customer_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/input_phone"
            android:maxLength="11"
            android:singleLine="true"
            android:inputType="phone"
            android:textColor="@color/gray_22"
            android:textColorHint="@color/gray_97"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_customer_type"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@id/ll_customer_phone"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:text="@string/type"
            android:textColor="@color/gray_22"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_guest_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/input_type"
            android:textColor="@color/gray_22"
            android:textColorHint="@color/gray_97"
            android:textSize="14sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_confirm_alter"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:background="@color/gray_15"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <include
        layout="@layout/layout_loading"/>

</RelativeLayout>