<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@drawable/ripple"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/tv_shop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_name"
        android:textColor="@color/gray_22"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_name_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_shop_name"
        android:layout_toRightOf="@id/tv_shop_name"
        android:textColor="@color/gray_6a"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_shop_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_shop_name"
        android:layout_marginTop="8dp"
        android:text="@string/shop_info"
        android:textColor="@color/gray_22"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_info_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_shop_info"
        android:layout_toRightOf="@id/tv_shop_info"
        android:textColor="@color/gray_6a"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_shop_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_shop_info"
        android:layout_marginTop="8dp"
        android:text="@string/shop_address"
        android:textColor="@color/gray_22"
        android:textSize="14sp"/>


    <TextView
        android:id="@+id/tv_address_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tv_shop_address"
        android:layout_toRightOf="@id/tv_shop_address"
        android:textColor="@color/gray_6a"
        android:textSize="14sp"/>

</RelativeLayout>