<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_ed"
                android:fitsSystemWindows="true">

    <include
        layout="@layout/widget_header_layout"/>

    <LinearLayout
        android:id="@+id/ll_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_shop_customer"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/shop_customer"
                android:textColor="@color/gray_22"
                android:textSize="15sp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_shop_data"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/flow_statistics"
                android:textColor="@color/gray_22"
                android:textSize="15sp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_age"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/age_statistics"
                android:textColor="@color/gray_22"
                android:textSize="15sp"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_statistics"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_sex"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sex_statistics"
                android:textColor="@color/gray_22"
                android:textSize="15sp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_times"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/time_statistics"
                android:textColor="@color/gray_22"
                android:textSize="15sp"/>
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_log_out"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:background="@color/gray_15"
        android:gravity="center"
        android:text="@string/log_out"
        android:textSize="14sp"
        android:textColor="@android:color/white"/>
</RelativeLayout>